<resources>
    <string name="app_name">E04 Sum Calculator</string>
    <string name="img_desc">Image of a calculator, not important for the functionality of the app.</string>
    <string name="default_input">0</string>
    <string name="btn_9">9</string>
    <string name="btn_8">8</string>
    <string name="btn_7">7</string>
    <string name="btn_star">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_eq">=</string>
    <string name="btn_c">C</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
</resources>