<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_desc"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/macro" />

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="end"
        android:inputType="text"
        android:text="@string/default_input"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <GridLayout
        android:id="@+id/grid1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input">


        <Button
            android:id="@+id/button7"
            android:onClick="numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/button8"
            android:onClick="numberInput"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/button9"
            android:onClick="numberInput"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_9" />

        <Button
            android:id="@+id/buttonStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="4"
            android:text="@string/btn_star" />
        <Button
            android:id="@+id/button6"
            android:onClick="numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/btn_6" />

        <Button
            android:id="@+id/button5"
            android:onClick="numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/btn_5" />
        <Button
            android:id="@+id/button4"
            android:onClick="numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/buttonminus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="4"
            android:text="@string/btn_minus" />

        <Button
            android:id="@+id/button3"
            android:onClick="numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/button2"
            android:onClick="numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/button1"
            android:onClick="numberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/btn_1" />
        <Button
            android:id="@+id/buttonplus"
            android:onClick="addPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="4"
            android:text="@string/btn_plus" />

        <Button
            android:id="@+id/buttonzero"
            android:onClick="numberInput"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:text="@string/default_input" />

        <Button
            android:id="@+id/buttonC"
            android:onClick="clearField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="3"
            android:text="@string/btn_c" />

        <Button
            android:id="@+id/button_eq"
            android:onClick="sumResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="4"
            android:text="@string/btn_eq" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>